--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "medpharma",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./src/assets/icon.png",
+    "icon": "./src/assets/icon-1.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./src/assets/splash.png",
